// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should could customize \`errorText\` 1`] = `
<div
  className="alert alert-danger"
  role="alert"
  style={undefined}
>
  <span
    className="icon-times-circle"
  />
  <h1>
    CUSTOMIZED ERROR LIST
  </h1>
</div>
`;

exports[`should render right thing and don't change unexpected 1`] = `
<div
  className="alert alert-danger"
  role="alert"
  style={undefined}
>
  <span
    className="icon-times-circle"
  />
  <strong>
    Error
  </strong>
</div>
`;
